# androtone

./: CLAUDE.md  CMakeLists.txt  README.md  androtone.jucer
Builds/android/: README.md  gradle.properties  settings.gradle  settings.gradle.kts
Builds/android/app/: CMakeLists.txt  build.gradle  build.gradle.kts
Builds/android/app/src/main/: AndroidManifest.xml
Builds/android/app/src/main/res/values/: strings.xml
Builds/android/app/src/release/res/values/: string.xml
Builds/desktop/: CMakeLists.txt
platform/android/: README.md  settings.gradle.kts
platform/android/app/: build.gradle.kts
platform/android/app/src/main/: AndroidManifest.xml
scripts/: build-projucer.ps1
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/Mixer/: Mixer.h
source/Sequencer/: Clip.h  ClipPresets.h  Pattern.h  StepSequencer.h  Track.h
source/SoundSources/: SawSound.h  SawVoice.h  SineSound.h  SineVoice.h
source/Ui/: AndrotoneLookAndFeel.h  MainTab.h  MixerTab.h  SessionTab.h
